--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -381,7 +381,7 @@
 				</tr>
 				<tr>
 					<td><label>48. Hình ảnh mẫu ngoài thực địa:</label></td>
-					<td><input type="file" accept="image/*, .pdf" multiple title="{{tooltips['hinhAnhNgoaiThucDia']}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
+					<td><input type="file" accept="image/*, .pdf" valid-file multiple title="{{tooltips['hinhAnhNgoaiThucDia']}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 				</tr>
 			<tr>
 				<td><label>49. Thông tin về phim, video: </label></td>
@@ -398,7 +398,7 @@
 				<tr><td><label>51. Xử lý chế tác mẫu vật: </label></td></tr>
 				<tr>
 					<td>Hình ảnh đính kèm Xử lý chế tác:</td>
-					<td><input type="file" multiple title="{{tooltips['hinhAnhDinhKem']}}" name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/*" class="input-form"></td>
+					<td><input type="file" multiple title="{{tooltips['hinhAnhDinhKem']}}" name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/*" valid-image class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Đính kèm Xử lý chế tác:</td>
@@ -552,7 +552,7 @@
 					<td><input type="file" title="{{tooltips['hoSoNhapMauVatDiKem']}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, .docx, .pdf"></td>
 				</tr>
 				<tr>
-					<td><label>69. Người nhập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
+					<td><label>69. Người lập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips['nguoiNhapPhieuMauVat']}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
