fix display when no images specified

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -45,6 +45,9 @@
 
 						var result =  obj.reduce(function (preStr, curElement){
 							// console.log(curElement.split('_+_')[1]);
+							if (curElement.length < 1){
+								return preStr;
+							}
 							var ext = extension(curElement);
 							switch (mediaType(ext)){
 								case 'video':
