--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -289,7 +289,7 @@
 				</tr>
 				<tr>
 					<td><label>27. Bản đồ:</label></td>
-					<td><input type="file" ng-model="data.banDo" title="{{tooltips['banDo']}}" accept=".zip, .rar" name="banDo" class="input-form"></td>
+					<td><input type="file" multiple ng-model="data.banDo" title="{{tooltips['banDo']}}" accept=".zip, .rar" name="banDo" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>28. Thông tin khác </label></td>
@@ -318,26 +318,26 @@
 				</tr>
 				<tr>
 						<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips[38]}}" name="taiLieuPhanTichStr" class="input-form" required></td>
-						<td><input type="file" ng-model="data.taiLieuPhanTichFile" multiple title="{{tooltips[38]}}" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
+						<td><input type="file" multiple ng-model="data.taiLieuPhanTichFile"   title="{{tooltips[38]}}" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
 				</tr>
 				<tr>
 					<td><label>33. Các phân tích quang học: </label></td>
 				</tr>
 				<tr>
 					<td><input type="text" title="{{tooltips[39]}}" name="phanTichQuangHocStr" ng-model="data.phanTichQuangHocStr" class="input-form"></td>
-					<td><input type="file" multiple accept=".doc, .docx, .pdf" name ="phanTichQuangHocFile" ng-model="data.phanTichQuangHocFile" class="input-form"></td>
+					<td><input type="file" multiple   accept=".doc, .docx, .pdf" name ="phanTichQuangHocFile" ng-model="data.phanTichQuangHocFile" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>34. Các kết quả phân tích thành phần vật chất:</label></td>
-					<td><input type="file" title="{{tooltips[40]}}" name="ketQuaThanhPhanVatChat" ng-model="data.ketQuaThanhPhanVatChat" class="input-form" accept=".docx, .doc, .pdf" ></td>
+					<td><input type="file" multiple title="{{tooltips[40]}}" name="ketQuaThanhPhanVatChat" ng-model="data.ketQuaThanhPhanVatChat" class="input-form" accept=".docx, .doc, .pdf" ></td>
 				</tr>
 				<tr>
 					<td><label>35. Kết quả phân tích đồng vị và định tuổi:</label></td>
-					<td><input type="file" title="{{tooltips[41]}}" name="ketQuaPhanTichDongVi" ng-model="data.ketQuaPhanTichDongVi" class="input-form" accept=".docx, .doc, .pdf" ></td>
+					<td><input type="file" multiple title="{{tooltips[41]}}" name="ketQuaPhanTichDongVi" ng-model="data.ketQuaPhanTichDongVi" class="input-form" accept=".docx, .doc, .pdf" ></td>
 				</tr>
 				<tr>
 					<td><label>36. Các phân tích khác:</label></td>
-					<td><input type="file" title="{{tooltips[42]}}" name="phanTichKhac" ng-model="data.phanTichKhac" class="input-form" accept=".docx, .doc, .pdf"></td>
+					<td><input type="file" multiple title="{{tooltips[42]}}" name="phanTichKhac" ng-model="data.phanTichKhac" class="input-form" accept=".docx, .doc, .pdf"></td>
 				</tr>
 					<td><label>37. Nhóm dữ liệu địa chất</label></td>
 				<tr>
@@ -360,11 +360,11 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 				<tr>
 					<td><label>39. Ảnh mẫu vật <span class="has-required">(*)</span>:</label></td>
-					<td><input type="file" multiple title="{{tooltips['anhMauVat']}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/*, .pdf" valid-file required></td>
+					<td><input type="file" multiple   title="{{tooltips['anhMauVat']}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/*, .pdf" valid-file required></td>
 				</tr>
 				<tr>
 					<td><label>40. Hình ảnh mẫu ngoài thực địa:</label></td>
-					<td><input type="file" accept="image/*" valid-image multiple title="{{tooltips['hinhAnhNgoaiThucDia']}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
+					<td><input type="file" multiple accept="image/*" valid-image   title="{{tooltips['hinhAnhNgoaiThucDia']}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>41. Thông tin về phim, video: </label></td>
@@ -375,17 +375,17 @@
 				<tr>
 					<td><label>42. Đính kèm phim, video:</label></td>
 					<td>
-						<input type="file" accept="video/*" name ="videoFile" ng-model="data.videoFile" class="input-form">
+						<input type="file" multiple accept="video/*" name ="videoFile" ng-model="data.videoFile" class="input-form">
 					</td>
 				</tr>
 				<tr><td><label>43. Xử lý chế tác mẫu vật: </label></td></tr>
 				<tr>
 					<td>Hình ảnh đính kèm Xử lý chế tác:</td>
-					<td><input type="file" multiple title="{{tooltips['hinhAnhDinhKem']}}" name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/*, .pdf" class="input-form" valid-image></td>
+					<td><input type="file" multiple   title="{{tooltips['hinhAnhDinhKem']}}" name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/*, .pdf" class="input-form" valid-image></td>
 				</tr>
 				<tr>
 					<td>Đính kèm xử lý chế tác:</td>
-					<td><input type="file" multiple title="{{tooltips['dinhKemXuLyCheTac']}}" name="dinhKemXuLyCheTac" ng-model="data.dinhKemXuLyCheTac" accept=".doc, .docx, .pdf" class="input-form"></td>
+					<td><input type="file" multiple   title="{{tooltips['dinhKemXuLyCheTac']}}" name="dinhKemXuLyCheTac" ng-model="data.dinhKemXuLyCheTac" accept=".doc, .docx, .pdf" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Phương thức xử lý chế tác:</td>
@@ -405,7 +405,7 @@
 				</tr>
 				<tr>
 					<td>Ảnh mẫu sau chế tác:</td>
-					<td><input type="file" title="{{tooltips['anhMauSauCheTac']}}" name="anhMauSauCheTac" ng-model="data.anhMauSauCheTac" class="input-form" accept="image/*, .pdf" valid-image></td>
+					<td><input type="file" multiple title="{{tooltips['anhMauSauCheTac']}}" name="anhMauSauCheTac" ng-model="data.anhMauSauCheTac" class="input-form" accept="image/*, .pdf" valid-image></td>
 				</tr>
 				<tr>
 					<td><label>44. Thông tin khác </label></td>
@@ -450,7 +450,7 @@
 				</tr>
 				<tr>
 					<td><label>51. Công thức hóa học:</label></td>
-					<td><input type="file" id="congThucHoaHoc" ng-model="data.congThucHoaHoc" title="{{tooltips['congThucHoaHoc']}}" name="congThucHoaHoc" accept=".doc, .docx, .pdf" class="input-form"></td>
+					<td><input type="file" multiple id="congThucHoaHoc" ng-model="data.congThucHoaHoc" title="{{tooltips['congThucHoaHoc']}}" name="congThucHoaHoc" accept=".doc, .docx, .pdf" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>52. Thành phần hóa học:</label></td>
@@ -466,14 +466,14 @@
 				</tr>
 				<tr>
 						<td><input type="text" ng-model="data.phanBoVietNamStr" class="input-form" title="{{tooltips['phanBoVietNamStr']}}" name="phanBoVietNamStr" required></td>
-						<td><input type="file" title="{{tooltips['phanBoVietNamFile']}}" ng-model="data.phanBoVietNamFile" class="input-form" multiple name ="phanBoVietNamFile"></td>
+						<td><input type="file" multiple title="{{tooltips['phanBoVietNamFile']}}" ng-model="data.phanBoVietNamFile" class="input-form"   name ="phanBoVietNamFile"></td>
 				</tr>
 				<tr>
 					<td><label>54. Phân bố trên thế giới (nếu có):</label></td>
 				</tr>
 				<tr>
 					<td><input type="text" ng-model="data.phanBoTrenTheGioiStr" title="{{tooltips['phanBoTrenTheGioiStr']}}" name="phanBoTrenTheGioiStr" class="input-form"></td>
-					<td><input type="file" title="{{tooltips['phanBoTrenTheGioiFile']}}" ng-model="data.phanBoTrenTheGioiFile" class="input-form" multiple name ="phanBoTrenTheGioiFile"></td>
+					<td><input type="file" multiple title="{{tooltips['phanBoTrenTheGioiFile']}}" ng-model="data.phanBoTrenTheGioiFile" class="input-form"   name ="phanBoTrenTheGioiFile"></td>
 				</tr>
 				<tr>
 					<td><label>55. Giá trị sử dụng (tài nguyên)(nếu có):</label></td>
@@ -564,11 +564,11 @@
 				</tr>
 				<tr>
 					<td><label>66. Giấy phép nhập mẫu:</label></td>
-					<td><input type="file" title="{{tooltips['giayPhepNhapMau']}}" name="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" class="input-form" accept="image/*, .pdf"></td>
+					<td><input type="file" multiple title="{{tooltips['giayPhepNhapMau']}}" name="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" class="input-form" accept="image/*, .pdf"></td>
 				</tr>
 				<tr>
 					<td><label>67. Hồ sơ nhập mẫu vật đi kèm:</label></td>
-					<td><input type="file" title="{{tooltips['hoSoNhapMauVatDiKem']}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, .docx, .pdf" ></td>
+					<td><input type="file" multiple title="{{tooltips['hoSoNhapMauVatDiKem']}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, .docx, .pdf" ></td>
 				</tr>
 				<tr>
 					<td><label>68. Người lập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
