--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -558,7 +558,7 @@
 			<tr>
 				<td><label>57. Hình thức nhập mẫu:</label></td>
 				<td>
-					<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='0'  multiple='multiple' ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
+					<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='0'  ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
 				</td>
 			</tr>
 			<tr>
